--- a/remote.html
+++ b/remote.html
@@ -39,7 +39,7 @@ button.searchBtn:hover{ background:#e52a2f; }
   <div class="search-bar">
     <input id="q" placeholder="Nhập từ khóa..." />
     <button class="searchBtn" id="searchBtn">🔍</button>
-    <button id="resetScreenBtn">🔄 Reset Screen</button>
+    <button id="resetScreenBtn">🔄 Khởi động lại màn hình</button>
   </div>
   <div style="margin-top:10px;">
     <input type="checkbox" id="karaokeOnly" checked />
