--- a/screen.html
+++ b/screen.html
@@ -6,59 +6,36 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <style>
 html, body { margin:0; height:100%; overflow:hidden; font-family:sans-serif; background:#000; color:#fff; }
-#background { position:absolute; top:0; left:0; width:100%; height:100%; background: url('background.png') no-repeat center center; background-size:cover; z-index:0; }
-#player { position:absolute; top:0; left:0; width:100%; height:100%; border:none; display:none; z-index:1; pointer-events:none; }
-#connectionStatus { position:absolute; top:10px; left:10px; font-size:28px; font-weight:bold; text-shadow:0 0 8px #000; z-index:3; }
-.connected { color:#0f0; }
-.disconnected { color:#ff3b3f; }
-
-#statusText {
-  position:absolute;
-  top:50%;
-  left:50%;
-  transform:translate(-50%,-50%);
-  background:rgba(0,0,0,0.5);
-  color:#fff;
-  padding:10px 15px;
-  border-radius:8px;
-  font-size:24px;
-  font-weight:bold;
-  opacity:0;
-  transition:opacity 1s ease;
-  z-index:4;
+#background { 
+  position:absolute; 
+  top:0; left:0; width:100%; height:100%; 
+  background: url('background.png') no-repeat center center; 
+  background-size: contain; 
+  background-color:#000;
+  z-index:0; 
 }
-
-#songCount {
-  position:absolute;
-  top:10px;
-  right:10px;
-  background:rgba(255,255,255,0.1);
-  padding:10px 15px;
-  border-radius:10px;
-  font-size:22px;
-  z-index:5;
+#player { 
+  position:absolute; top:0; left:0; width:100%; height:100%; 
+  border:none; display:none; z-index:1; 
 }
-
-#ytLogo {
+#youtubeLogo {
   position:absolute;
   bottom:10px;
   right:10px;
   width:80px;
-  height:24px;
-  background: url('youtube-logo.png') no-repeat center center;
-  background-size:contain;
-  z-index:6;
+  height:auto;
+  z-index:10;
 }
+#title { display:none; } /* Ẩn tên và kênh */
+#statusText { display:none; } /* Ẩn trạng thái */
+#songCount { display:none; } /* Ẩn số bài */
 </style>
 </head>
 <body>
 
-<div id="connectionStatus">Room ID: ——— (Chưa kết nối)</div>
 <div id="background"></div>
 <iframe id="player" allowfullscreen allow="autoplay" allow="autoplay; encrypted-media"></iframe>
-<div id="statusText"></div>
-<div id="songCount">Đã hát: 0 bài</div>
-<div id="ytLogo"></div>
+<img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" id="youtubeLogo">
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
@@ -81,97 +58,53 @@ const commandRef = ref(db,"command");
 const connectionRef = ref(db,"connectionStatus");
 const resetRef = ref(db,"resetScreen");
 
-// DOM
 const playerIframe = document.getElementById("player");
-const connectionStatusEl = document.getElementById("connectionStatus");
 const background = document.getElementById("background");
-const statusTextEl = document.getElementById("statusText");
-const songCountEl = document.getElementById("songCount");
 
 let currentVideoId = null;
-let songCount = 0;
-let resetHandled = false; // Chỉ reset 1 lần
 
 let roomId = localStorage.getItem("roomId") || Math.floor(100000 + Math.random()*900000).toString();
 localStorage.setItem("roomId", roomId);
-set(connectionRef,{connected:false, roomId});
 
-function showStatusText(msg){
-  statusTextEl.textContent = msg;
-  statusTextEl.style.opacity = 1;
-  setTimeout(()=>{ statusTextEl.style.opacity = 0; },4000);
-}
+let resetHandled=false;
 
-// Set video
-function setCommand(id){
-  currentVideoId = id;
-  if(!id){
-    playerIframe.style.display='none';
-    background.style.display='block';
-  } else {
-    songCount++;
-    songCountEl.textContent = `Đã hát: ${songCount} bài`;
-    playerIframe.src = `https://www.youtube.com/embed/${id}?autoplay=1&controls=0&modestbranding=1&rel=0&fs=0&enablejsapi=1`;
-    background.style.display='block';
-    playerIframe.style.display='block';
-  }
-}
-
-// Reset screen chỉ 1 lần
+// Reset screen
 onValue(resetRef,snapshot=>{
   if(snapshot.val()===true && !resetHandled){
-    resetHandled = true;
+    resetHandled=true;
     location.reload();
     set(resetRef,false);
   }
 });
 
-// Listen command
+// Lắng nghe lệnh phát từ Remote
 onValue(commandRef,snapshot=>{
   const cmd = snapshot.val();
   if(!cmd) return;
   if(cmd.roomId === roomId){
-    if(cmd.resetTotal){
-      songCount = 0;
-      songCountEl.textContent = 'Đã hát: 0 bài';
-      showStatusText("♻️ Đã reset số bài!");
-    }
-    if(cmd.id && cmd.id !== currentVideoId) setCommand(cmd.id);
-    if(cmd.mute!==undefined){
-      playerIframe.contentWindow.postMessage(`{"event":"command","func":"${cmd.mute? "mute":"unMute"}","args":""}`,'*');
-    }
-    if(cmd.volume!==undefined){
-      playerIframe.contentWindow.postMessage(`{"event":"command","func":"setVolume","args":[${cmd.volume}]}`,'*');
+    if(cmd.id && cmd.id !== currentVideoId){
+      currentVideoId = cmd.id;
+      // Phát video và tắt mọi controls/thumbnail gợi ý
+      playerIframe.src = `https://www.youtube.com/embed/${cmd.id}?autoplay=1&controls=0&rel=0&modestbranding=1&fs=0&disablekb=1&iv_load_policy=3`;
+      playerIframe.style.display='block';
+      background.style.display='none';
     }
     set(connectionRef,{connected:true, roomId});
   }
 });
 
-// Connection status
-onValue(connectionRef,snapshot=>{
-  const data = snapshot.val();
-  if(data?.connected){
-    connectionStatusEl.textContent = `✅ Room: ${data.roomId} (OK)`;
-    connectionStatusEl.classList.add("connected");
-    connectionStatusEl.classList.remove("disconnected");
-  } else {
-    connectionStatusEl.textContent = `Room ID: ${roomId} (Chưa kết nối)`;
-    connectionStatusEl.classList.add("disconnected");
-    connectionStatusEl.classList.remove("connected");
-  }
-});
-
-// YouTube IFrame API
+// YouTube IFrame API (ẩn màn hình kết thúc)
 let tag=document.createElement('script');
 tag.src="https://www.youtube.com/iframe_api";
 document.body.appendChild(tag);
 
 function onYouTubeIframeAPIReady(){
-  window.player=new YT.Player('player',{
+  window.player = new YT.Player('player',{
     events:{
       'onReady':()=>{},
       'onStateChange': e=>{
         if(e.data===YT.PlayerState.ENDED){
+          // Khi kết thúc video → hiển thị background
           playerIframe.style.display='none';
           background.style.display='block';
         }
